--- a/index.html
+++ b/index.html
@@ -3,62 +3,81 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet" />
   <title>3D Easy – Você imagina, a gente imprime</title>
   <style>
+    :root {
+      --primary-color: #007bff;
+      --dark-bg: #0d0d0d;
+      --light-bg: #1b1b1b;
+      --text-color: #ffffff;
+      --muted-color: #9e9e9e;
+    }
     body {
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #0e0e0e;
-      color: #ffffff;
+      font-family: 'Roboto', 'Segoe UI', sans-serif;
+      background-color: var(--dark-bg);
+      color: var(--text-color);
+      line-height: 1.6;
     }
     header {
-      background-color: #1e1e1e;
-      padding: 20px;
+      background: var(--light-bg);
+      padding: 40px 20px;
       text-align: center;
     }
     header h1 {
       margin: 0;
-      font-size: 2.5em;
-      color: #ffffff;
+      font-size: 3em;
     }
     header p {
-      margin: 5px 0;
-      font-size: 1.2em;
-      color: #9e9e9e;
+      margin: 10px 0 0;
+      color: var(--muted-color);
     }
     nav {
       display: flex;
       justify-content: center;
-      gap: 20px;
-      margin: 10px 0;
+      gap: 30px;
+      margin-top: 20px;
     }
     nav a {
-      color: #ffffff;
+      color: var(--text-color);
       text-decoration: none;
-      font-weight: bold;
+      font-weight: 500;
+      transition: color 0.3s;
+    }
+    nav a:hover {
+      color: var(--primary-color);
     }
     section {
-      padding: 40px 20px;
-      max-width: 800px;
+      padding: 60px 20px;
+      max-width: 900px;
       margin: auto;
     }
+    h2 {
+      color: var(--primary-color);
+      margin-bottom: 20px;
+    }
     .cta-button {
-      background-color: #7a32ff;
-      color: white;
-      padding: 15px 30px;
+      background-color: var(--primary-color);
+      color: #fff;
+      padding: 15px 40px;
       border: none;
-      border-radius: 10px;
-      font-size: 1.2em;
+      border-radius: 8px;
+      font-size: 1.1em;
       cursor: pointer;
+      transition: background 0.3s;
       display: block;
-      margin: 30px auto;
+      margin: 40px auto;
+    }
+    .cta-button:hover {
+      background-color: #0056b3;
     }
     footer {
-      background-color: #1e1e1e;
+      background: var(--light-bg);
       text-align: center;
       padding: 20px;
       font-size: 0.9em;
-      color: #777;
+      color: var(--muted-color);
     }
   </style>
 </head>
